--- a/app/src/main/res/layout/activity_recipes_detail_screen.xml
+++ b/app/src/main/res/layout/activity_recipes_detail_screen.xml
@@ -169,13 +169,19 @@
                     android:layout_marginLeft="@dimen/margin_medium_2"
                     android:layout_marginRight="@dimen/margin_medium_2"
                     android:background="#949292" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_restaurants"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_medium_2"
+                    android:layout_marginLeft="@dimen/margin_medium_2"
+                    android:layout_marginRight="@dimen/margin_medium_2"
+                    android:layout_marginTop="@dimen/margin_medium_2"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/> />
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_restaurants"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/> />
+
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
