fixed the tile of the video fragment       , restaurant layout       , hide the unused left menu       and show two applications in device or emulator

--- a/app/src/main/res/layout/view_item_restaurnat.xml
+++ b/app/src/main/res/layout/view_item_restaurnat.xml
@@ -102,7 +102,7 @@
                 android:layout_below="@id/tv_township"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_toRightOf="@id/iv_restaurant_photo"
+                android:layout_alignParentRight="true"
                 android:text="​ေျကးအိုး"
                 android:textColor="@color/primary"
                 android:textSize="@dimen/text_small" />
