--- a/app/src/main/res/menu/left_menu.xml
+++ b/app/src/main/res/menu/left_menu.xml
@@ -30,7 +30,7 @@
 
 
     </group>
-    <group android:checkableBehavior="single">
+   <!-- <group android:checkableBehavior="single">
         <item
             android:id="@+id/setting"
             android:icon="@drawable/ic_healing_24dp"
@@ -39,5 +39,5 @@
             android:id="@+id/about_us"
             android:icon="@drawable/ic_store_mall_directory_24dp"
             android:title="@string/about_us" />
-    </group>
+    </group>-->
 </menu>
