--- a/app/src/main/res/layout/view_item_favourite.xml
+++ b/app/src/main/res/layout/view_item_favourite.xml
@@ -5,19 +5,17 @@
     android:orientation="vertical"
     android:padding="@dimen/margin_medium">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/padding_medium"
+        android:orientation="vertical"
         android:paddingTop="@dimen/padding_medium">
 
         <ImageView
             android:id="@+id/iv_favourite_photo"
-            android:layout_width="@dimen/restaurnt_width"
-            android:layout_height="@dimen/restaurnt_height"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="@dimen/margin_medium_2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/recipe_image_height"
             android:scaleType="centerCrop"
             android:src="@drawable/pork" />
 
@@ -25,8 +23,6 @@
             android:id="@+id/tv_favourite_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="@dimen/margin_medium_2"
             android:layout_toRightOf="@id/iv_favourite_photo"
             android:lineSpacingMultiplier="1.2"
             android:text="၀က္သားမုုန္ညွင္းခ်ဥ္ေပါင္း"
@@ -38,15 +34,12 @@
             android:id="@+id/tv_favourite_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_below="@id/tv_favourite_title"
-            android:layout_toRightOf="@id/iv_favourite_photo"
             android:maxLines="1"
-            android:ellipsize="end"
-            android:text="ၾကာျမင့္ခ်ိန္- ၂၀ မိနစ္"
+            android:text="၂၀ မိနစ္"
             android:textColor="@color/black_overlay_light"
             android:textSize="@dimen/text_regular" />
-
+<!--
         <com.padc.recipes.components.MMTextView
             android:id="@+id/tv_chef"
             android:layout_width="wrap_content"
@@ -56,9 +49,9 @@
             android:layout_alignParentRight="true"
             android:text="Wutt Yee Food House"
             android:textColor="@color/primary_text"
-            android:textSize="@dimen/text_regular" />
+            android:textSize="@dimen/text_regular" />-->
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
